clusters/my-cluster/apps/security/zitadel/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel-ingress
  namespace: media
  annotations:
    hajimari.io/icon: simple-icons:springsecurity
    hajimari.io/enable: true
    hajimari.io/appName: "Zitadel"
    hajimari.io/group: "Security"
spec:
  ingressClassName: traefik
  rules:
  - host: "sso.${SECRET_LOCAL_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zitadel
            port:
              number: 8080
